# garmin-sleep-ml-federated

./: .gitignore  README.md  TODO_IMPROVEMENTS.md  best_federated_model_fold_1.pt  best_federated_model_fold_2.pt  federated_scaler_fold_1.joblib  federated_scaler_fold_3.joblib  federated_scaler_fold_4.joblib  requirements.txt  submission.csv  submission_ensemble.csv  submission_weighted.csv
Slide(1)/: 20251120.txt  20251124.txt  20251201.txt  20251204.txt
artifacts/: best_federated_model.pt  best_federated_model_fold_0.pt  best_federated_model_fold_1.pt  best_federated_model_fold_2.pt  best_federated_model_fold_3.pt  best_federated_model_fold_4.pt  federated_scaler.joblib  federated_scaler_fold_0.joblib  federated_scaler_fold_1.joblib  federated_scaler_fold_2.joblib  federated_scaler_fold_3.joblib  federated_scaler_fold_4.joblib  last_federated_model.pt  submission_ensemble.csv  submission_hybrid.csv  submission_rf.csv
randomforest_folder/: client.py  config.py  data_utils.py  inference_kaggle.py  server.py  train_federated.py
src/: make_hybrid_ensemble.py  make_weighted_ensemble.py
src/ENSEMBLE_VERSION/: client.py  config.py  data_utils.py  evaluate_cv.py  inference_kaggle.py  model.py  server.py  train_federated.py
src/INSPO/CSI-TrackI-sem1-aa-2025-26-main/CSI-TrackI-sem1-aa-2025-26-main/FL_4dec/dtbagging/dtbagging/: client_app.py  final_model.json  pyproject.toml  task.py
src/INSPO/CSI-TrackI-sem1-aa-2025-26-main/CSI-TrackI-sem1-aa-2025-26-main/FL_4dec/dtbagging/dtbagging/clients_data/: client_1.csv  client_2.csv  client_3.csv
src/INSPO/CSI-TrackI-sem1-aa-2025-26-main/CSI-TrackI-sem1-aa-2025-26-main/FL_4dec/randomforest/randomforest/: client_app.py  pyproject.toml  run_all.py  task.py
src/INSPO/CSI-TrackI-sem1-aa-2025-26-main/CSI-TrackI-sem1-aa-2025-26-main/FL_4dec/randomforest/randomforest/clients_data/: client_0.csv
src/INSPO/CSI-TrackI-sem1-aa-2025-26-main/CSI-TrackI-sem1-aa-2025-26-main/FL_4dec/randomforest/randomforest/server/: config.py  server_flwr.py  strategy.py
src/NEW_VERSION/: client.py  config.py  data_utils.py  inference_kaggle.py  (+4 more)
(+21 files in other folders)
