[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "randomforest"
version = "1.0.0"
description = "Random Forest Federated Learning with Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "your-name"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
n-estimators = 50
max-depth = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
